--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+
   flutter_rating_bar: ^4.0.1
 
   provider: ^6.0.5
+
   sqflite: 2.2.0+2
 
   loading_animation_widget:
@@ -95,6 +97,7 @@ flutter:
     - assets/images/fb.png
     - assets/images/prod1.png
     - assets/images/poster.jpg
+    - assets/images/user.png
     - assets/images/postertext.png
     - assets/images/mastercard.png
     - assets/images/upi_icon.png
@@ -113,6 +116,7 @@ flutter:
     - assets/images/products/Demolition Breaker/DemolitionBreaker.jpg
     - assets/images/products/Demolition Breaker/demolitionbreakerpic2.jpg
     - assets/images/products/Demolition Breaker/demolitionbreakerpic3.jpg
+
 
   #   - images/a_dot_ham.jpeg
 
